Fix: overflow fix.

--- a/assets/_sass/thejovan/blog/_markdown-syntax.scss
+++ b/assets/_sass/thejovan/blog/_markdown-syntax.scss
@@ -13,7 +13,7 @@
 
 
   .highlight {
-    overflow: scroll;
+    //overflow: scroll;
     padding: 1rem;
   }
 
